lightning-terminal/lit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lit
  namespace: bitcoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lit
    spec:
      containers:
      - image: lightninglabs/lightning-terminal:v0.12.4-alpha
        imagePullPolicy: IfNotPresent
        name: lit
        ports:
        - containerPort: 10009
          protocol: TCP
        - containerPort: 9735
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: lit-vol
          mountPath: /root/.lit
        - name: lit-conf
          mountPath: "/root/.lit/lit.conf"
          subPath: lit.conf
          readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
      - name: lit-vol
        persistentVolumeClaim:
          claimName: lit-pvc
      - name: lit-conf
        secret:
          secretName: lit-conf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lit
  name: lit
  namespace: bitcoin
spec:
  type: NodePort
  selector:
    app: lit
  ports:
  - name: rpc
    port: 10009
    targetPort: 10009
    nodePort: 31109
  - name: p2p
    port: 9735
    targetPort: 9735
    nodePort: 31735
  - name: rest
    port: 8080
    targetPort: 8080
    nodePort: 31808
  - name: ui
    port: 8443
    targetPort: 8443
    nodePort: 31844
