lightning-terminal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: lightning
  namespace: bitcoin
spec:
  ingressClassName: nginx
  rules:
  - host: lightning.schmuckele.nl
    http:
      paths:
      - backend:
          service:
            name: lit
            port:
              number: 8443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - lightning.schmuckele.nl
    secretName: lightning.schmuckele.nl-tls
